crates/tests/libs/bindgen/data/error/delegate_param_name_unique/input.rdl

#[winrt]
mod Test {
    delegate fn Handler(a: i32, a: i32);
}
        